DB-9370: fix AdapterPartition.getDescriptor